[gd_scene load_steps=8 format=4 uid="uid://d132qpu20jjmv"]

[ext_resource type="Script" uid="uid://la62ttqljcw1" path="res://Scripts/main.gd" id="1_kln2b"]
[ext_resource type="PackedScene" uid="uid://ddkgpqhjvcfsq" path="res://Scenes/canvas_layer.tscn" id="1_r150o"]
[ext_resource type="Texture2D" uid="uid://pj37h7iw5uu" path="res://Resources/Tilemap.png" id="4_pbw6q"]
[ext_resource type="Script" uid="uid://cycg0l74ryc5i" path="res://Scripts/army_list.gd" id="4_rgh2o"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pbw6q"]
texture = ExtResource("4_pbw6q")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0

[sub_resource type="TileSet" id="TileSet_pbw6q"]
tile_shape = 3
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
custom_data_layer_0/name = "base"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "obstacle"
custom_data_layer_1/type = 1
sources/0 = SubResource("TileSetAtlasSource_pbw6q")

[sub_resource type="CircleShape2D" id="CircleShape2D_kln2b"]

[node name="Game" type="Node2D" node_paths=PackedStringArray("day_label", "tilemap", "camera", "ui_node", "army_list", "mouse_follow")]
script = ExtResource("1_kln2b")
day_label = NodePath("UI2/Label")
tilemap = NodePath("TileMapLayer")
map_size = 6
camera = NodePath("Player Viewport")
ui_node = NodePath("UI")
army_list = NodePath("Army List")
mouse_follow = NodePath("Area2D")

[node name="UI" parent="." instance=ExtResource("1_r150o")]

[node name="UI2" type="CanvasLayer" parent="."]

[node name="Zoom Out" type="Button" parent="UI2"]
offset_left = 1063.0
offset_top = 470.0
offset_right = 1149.0
offset_bottom = 509.0
text = "Zoom Out"

[node name="Zoom In" type="Button" parent="UI2"]
offset_left = 1063.0
offset_top = 512.0
offset_right = 1149.0
offset_bottom = 551.0
text = "Zoom In"

[node name="Next Day" type="Button" parent="UI2"]
offset_left = 1064.0
offset_top = 554.0
offset_right = 1149.0
offset_bottom = 646.0
text = "Next Day"

[node name="Label" type="Label" parent="UI2"]
offset_left = 1087.0
offset_top = 555.0
offset_right = 1127.0
offset_bottom = 578.0
theme_override_font_sizes/font_size = 10
text = "Day"
horizontal_alignment = 1

[node name="Player Viewport" type="Camera2D" parent="."]
zoom = Vector2(5, 5)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD+//r/AwAEAAAAAAD///r/AwAAAAEAAAAAAPr/AwAEAAAAAAABAPr/AwAEAAAAAAACAPr/AwAEAAAAAAADAPr/AwAAAAEAAAAEAPr/AwAEAAAAAAD9//v/AwAEAAAAAAD9//z/AwAEAAAAAAD+//v/AwAEAAAAAAD+//z/AwAEAAAAAAD///v/AwAEAAAAAAD///z/AwAEAAAAAAAAAPv/AwAEAAAAAAAAAPz/AwAEAAAAAAABAPv/AwAEAAAAAAABAPz/AwADAAEAAAACAPv/AwAEAAAAAAACAPz/AwAAAAEAAAADAPv/AwAAAAEAAAADAPz/AwAEAAAAAAAEAPv/AwAEAAAAAAAEAPz/AwAEAAAAAAAFAPv/AwAEAAAAAAAFAPz/AwAEAAAAAAAGAPv/AwAEAAAAAAAGAPz/AwAEAAAAAAAHAPv/AwAAAAEAAAAHAPz/AwAEAAAAAAAIAPv/AwAAAAEAAAAIAPz/AwAEAAAAAAAJAPv/AwADAAEAAAAJAPz/AwAEAAAAAAAKAPv/AwAAAAEAAAAKAPz/AwAAAAEAAAALAPv/AwAAAAEAAAALAPz/AwAAAAAAAAAMAPv/AwAAAAAAAAAMAPz/AwAAAAAAAAANAPv/AwAAAAEAAAANAPz/AwAAAAEAAAD5//D/AwAAAAAAAAD5//H/AwAAAAAAAAD5//L/AwAAAAAAAAD5//P/AwAEAAAAAAD5//T/AwAAAAAAAAD5//X/AwAAAAAAAAD5//b/AwAAAAAAAAD5//f/AwAAAAAAAAD5//j/AwAEAAAAAAD5//n/AwAEAAAAAAD5//r/AwAEAAAAAAD5//v/AwAEAAAAAAD5//z/AwAAAAAAAAD5//3/AwAEAAAAAAD5//7/AwAAAAAAAAD5////AwAAAAAAAAD5/wAAAwAEAAAAAAD5/wEAAwAEAAAAAAD5/wIAAwAAAAAAAAD5/wMAAwAAAAAAAAD5/wQAAwAAAAAAAAD5/wUAAwAAAAAAAAD5/wYAAwAAAAAAAAD6//D/AwAAAAAAAAD6//H/AwAAAAAAAAD6//L/AwAAAAAAAAD6//P/AwAEAAAAAAD6//T/AwAEAAAAAAD6//X/AwAEAAAAAAD6//b/AwAAAAAAAAD6//f/AwAAAAAAAAD6//j/AwAAAAAAAAD6//n/AwAEAAAAAAD6//r/AwAEAAAAAAD6//v/AwAAAAAAAAD6//z/AwAEAAAAAAD6//3/AwAEAAAAAAD6//7/AwAAAAAAAAD6////AwAAAAAAAAD6/wAAAwAEAAAAAAD6/wEAAwAAAAAAAAD6/wIAAwAEAAAAAAD6/wMAAwAAAAAAAAD6/wQAAwAAAAAAAAD6/wUAAwAAAAEAAAD6/wYAAwAAAAEAAAD7//D/AwAAAAAAAAD7//H/AwAAAAAAAAD7//L/AwAAAAAAAAD7//P/AwAAAAAAAAD7//T/AwAEAAAAAAD7//X/AwAEAAAAAAD7//b/AwAEAAAAAAD7//f/AwAAAAAAAAD7//j/AwAAAAAAAAD7//n/AwAEAAAAAAD7//r/AwAEAAAAAAD7//v/AwAAAAAAAAD7//z/AwAAAAAAAAD7//3/AwAEAAAAAAD7//7/AwAAAAAAAAD7////AwAAAAAAAAD7/wAAAwAEAAAAAAD7/wEAAwAAAAEAAAD7/wIAAwAEAAAAAAD7/wMAAwAAAAEAAAD7/wQAAwAAAAEAAAD7/wUAAwAAAAAAAAD7/wYAAwAAAAAAAAD8//D/AwAAAAAAAAD8//H/AwABAAAAAAD8//L/AwAAAAAAAAD8//P/AwABAAAAAAD8//T/AwAAAAAAAAD8//X/AwAEAAAAAAD8//b/AwAEAAAAAAD8//f/AwAEAAAAAAD8//j/AwAAAAAAAAD8//n/AwAEAAAAAAD8//r/AwAEAAAAAAD8//v/AwAEAAAAAAD8//z/AwAEAAAAAAD8//3/AwAAAAAAAAD8//7/AwAEAAAAAAD8////AwAEAAAAAAD8/wAAAwAEAAAAAAD8/wEAAwADAAEAAAD8/wIAAwAEAAAAAAD8/wMAAwAEAAAAAAD8/wQAAwAAAAAAAAD8/wUAAwAAAAEAAAD8/wYAAwAAAAEAAAD9//D/AwAAAAAAAAD9//H/AwAAAAAAAAD9//L/AwABAAAAAAD9//P/AwABAAAAAAD9//T/AwABAAAAAAD9//X/AwABAAAAAAD9//b/AwAEAAAAAAD9//f/AwAEAAAAAAD9//j/AwAEAAAAAAD9//n/AwAEAAAAAAD9//r/AwABAAAAAAD9//3/AwAAAAEAAAD9//7/AwAAAAEAAAD9////AwAEAAAAAAD9/wAAAwAEAAAAAAD9/wEAAwABAAAAAAD9/wIAAwADAAEAAAD9/wMAAwAEAAAAAAD9/wQAAwAAAAEAAAD9/wUAAwAAAAEAAAD9/wYAAwAAAAEAAAD+//D/AwAAAAAAAAD+//H/AwAAAAAAAAD+//L/AwAAAAAAAAD+//P/AwAAAAAAAAD+//T/AwABAAAAAAD+//X/AwABAAAAAAD+//b/AwAEAAAAAAD+//f/AwAEAAAAAAD+//j/AwAEAAAAAAD+//n/AwAEAAAAAAD+//3/AwAAAAAAAAD+//7/AwAAAAAAAAD+////AwAAAAAAAAD+/wAAAwAEAAAAAAD+/wEAAwAAAAEAAAD+/wIAAwAAAAEAAAD+/wMAAwAEAAAAAAD+/wQAAwAAAAEAAAD+/wUAAwAAAAAAAAD+/wYAAwADAAEAAAD///D/AwAAAAAAAAD///H/AwAAAAAAAAD///L/AwAAAAAAAAD///P/AwABAAAAAAD///T/AwABAAAAAAD///X/AwAAAAAAAAD///b/AwABAAAAAAD///f/AwAEAAAAAAD///j/AwAAAAAAAAD///n/AwAEAAAAAAD///3/AwAEAAAAAAD///7/AwAAAAEAAAD/////AwAAAAEAAAD//wAAAwAEAAAAAAD//wEAAwAEAAAAAAD//wIAAwAAAAEAAAD//wMAAwAAAAEAAAD//wQAAwAEAAAAAAD//wUAAwAAAAEAAAD//wYAAwAAAAEAAAAAAPD/AwAAAAAAAAAAAPH/AwAAAAAAAAAAAPL/AwAAAAAAAAAAAPP/AwABAAAAAAAAAPT/AwAAAAAAAAAAAPX/AwAAAAAAAAAAAPb/AwABAAAAAAAAAPf/AwAEAAAAAAAAAPj/AwAAAAEAAAAAAPn/AwAAAAEAAAAAAP3/AwAEAAAAAAAAAP7/AwAAAAEAAAAAAP//AwAAAAEAAAAAAAAAAwAEAAAAAAAAAAEAAwAEAAAAAAAAAAIAAwABAAAAAAAAAAMAAwAAAAEAAAAAAAQAAwAEAAAAAAAAAAUAAwAEAAAAAAAAAAYAAwAAAAEAAAABAPD/AwAAAAAAAAABAPH/AwAAAAAAAAABAPL/AwAAAAAAAAABAPP/AwABAAAAAAABAPT/AwAAAAAAAAABAPX/AwAAAAEAAAABAPb/AwAAAAEAAAABAPf/AwAEAAAAAAABAPj/AwAEAAAAAAABAPn/AwADAAEAAAABAP3/AwAEAAAAAAABAP7/AwAEAAAAAAABAP//AwAAAAEAAAABAAAAAwAEAAAAAAABAAEAAwAEAAAAAAABAAIAAwAAAAEAAAABAAMAAwAAAAEAAAABAAQAAwAAAAEAAAABAAUAAwAEAAAAAAABAAYAAwAAAAEAAAACAPD/AwAAAAAAAAACAPH/AwAAAAAAAAACAPL/AwABAAAAAAACAPP/AwAAAAEAAAACAPT/AwAAAAEAAAACAPX/AwAAAAEAAAACAPb/AwAAAAEAAAACAPf/AwAEAAAAAAACAPj/AwAEAAAAAAACAPn/AwAEAAAAAAACAP3/AwAAAAEAAAACAP7/AwAEAAAAAAACAP//AwAEAAAAAAACAAAAAwAEAAAAAAACAAEAAwAAAAEAAAACAAIAAwAEAAAAAAACAAMAAwAAAAAAAAACAAQAAwAAAAEAAAACAAUAAwAEAAAAAAACAAYAAwAAAAAAAAADAPD/AwAAAAAAAAADAPH/AwAAAAEAAAADAPL/AwAAAAEAAAADAPP/AwAAAAEAAAADAPT/AwAAAAEAAAADAPX/AwABAAAAAAADAPb/AwABAAAAAAADAPf/AwAEAAAAAAADAPj/AwADAAEAAAADAPn/AwAEAAAAAAADAP3/AwAAAAEAAAADAP7/AwAAAAEAAAADAP//AwAEAAAAAAADAAAAAwAEAAAAAAADAAEAAwAAAAEAAAADAAIAAwAEAAAAAAADAAMAAwAAAAEAAAADAAQAAwAAAAEAAAADAAUAAwAAAAAAAAADAAYAAwAEAAAAAAAEAPD/AwAAAAEAAAAEAPH/AwAAAAEAAAAEAPL/AwAAAAEAAAAEAPP/AwAAAAAAAAAEAPT/AwAAAAAAAAAEAPX/AwABAAAAAAAEAPb/AwAAAAAAAAAEAPf/AwAEAAAAAAAEAPj/AwAEAAAAAAAEAPn/AwAAAAEAAAAEAP3/AwAEAAAAAAAEAP7/AwAAAAEAAAAEAP//AwAAAAEAAAAEAAAAAwAEAAAAAAAEAAEAAwAEAAAAAAAEAAIAAwAEAAAAAAAEAAMAAwAEAAAAAAAEAAQAAwAAAAAAAAAEAAUAAwAAAAAAAAAEAAYAAwAEAAAAAAAFAPD/AwAAAAEAAAAFAPH/AwABAAAAAAAFAPL/AwAAAAAAAAAFAPP/AwAAAAAAAAAFAPT/AwAAAAAAAAAFAPX/AwABAAAAAAAFAPb/AwABAAAAAAAFAPf/AwAAAAEAAAAFAPj/AwAAAAEAAAAFAPn/AwAAAAEAAAAFAPr/AwAEAAAAAAAFAP3/AwAAAAEAAAAFAP7/AwAEAAAAAAAFAP//AwAAAAEAAAAFAAAAAwAEAAAAAAAFAAEAAwAEAAAAAAAFAAIAAwAAAAAAAAAFAAMAAwAEAAAAAAAFAAQAAwAAAAAAAAAFAAUAAwAAAAAAAAAFAAYAAwAEAAAAAAAGAPD/AwAAAAAAAAAGAPH/AwABAAAAAAAGAPL/AwAAAAAAAAAGAPP/AwAAAAAAAAAGAPT/AwAAAAAAAAAGAPX/AwAAAAEAAAAGAPb/AwAAAAEAAAAGAPf/AwAAAAEAAAAGAPj/AwAAAAEAAAAGAPn/AwAAAAAAAAAGAPr/AwAAAAEAAAAGAP3/AwAAAAEAAAAGAP7/AwAEAAAAAAAGAP//AwAEAAAAAAAGAAAAAwAAAAEAAAAGAAEAAwAEAAAAAAAGAAIAAwAEAAAAAAAGAAMAAwAAAAAAAAAGAAQAAwAEAAAAAAAGAAUAAwAAAAAAAAAGAAYAAwAAAAAAAAAHAPD/AwAAAAAAAAAHAPH/AwABAAAAAAAHAPL/AwAAAAAAAAAHAPP/AwAAAAEAAAAHAPT/AwAAAAEAAAAHAPX/AwAAAAEAAAAHAPb/AwAAAAAAAAAHAPf/AwAAAAEAAAAHAPj/AwADAAEAAAAHAPn/AwAAAAEAAAAHAPr/AwAAAAEAAAAHAP3/AwAEAAAAAAAHAP7/AwAAAAEAAAAHAP//AwAEAAAAAAAHAAAAAwABAAAAAAAHAAEAAwAEAAAAAAAHAAIAAwAEAAAAAAAHAAMAAwAEAAAAAAAHAAQAAwAEAAAAAAAHAAUAAwAEAAAAAAAHAAYAAwAAAAAAAAAIAPD/AwABAAAAAAAIAPH/AwABAAAAAAAIAPL/AwAAAAEAAAAIAPP/AwAAAAEAAAAIAPT/AwAAAAEAAAAIAPX/AwAAAAEAAAAIAPb/AwAAAAEAAAAIAPf/AwAAAAEAAAAIAPj/AwAAAAEAAAAIAPn/AwADAAEAAAAIAPr/AwABAAAAAAAIAP3/AwAEAAAAAAAIAP7/AwAAAAEAAAAIAP//AwAAAAAAAAAIAAAAAwAEAAAAAAAIAAEAAwAEAAAAAAAIAAIAAwAEAAAAAAAIAAMAAwAEAAAAAAAIAAQAAwAAAAAAAAAIAAUAAwAEAAAAAAAIAAYAAwAAAAAAAAAJAPD/AwAAAAAAAAAJAPH/AwABAAAAAAAJAPL/AwAAAAEAAAAJAPP/AwABAAAAAAAJAPT/AwABAAAAAAAJAPX/AwAAAAEAAAAJAPb/AwAAAAEAAAAJAPf/AwABAAAAAAAJAPj/AwABAAAAAAAJAPn/AwAAAAEAAAAJAPr/AwAAAAEAAAAJAP3/AwAEAAAAAAAJAP7/AwAAAAAAAAAJAP//AwABAAAAAAAJAAAAAwADAAEAAAAJAAEAAwAEAAAAAAAJAAIAAwAAAAAAAAAJAAMAAwAEAAAAAAAJAAQAAwAEAAAAAAAJAAUAAwAAAAEAAAAJAAYAAwAEAAAAAAAKAPD/AwAAAAAAAAAKAPH/AwAAAAAAAAAKAPL/AwAAAAAAAAAKAPP/AwAAAAAAAAAKAPT/AwAAAAAAAAAKAPX/AwAAAAAAAAAKAPb/AwAAAAAAAAAKAPf/AwAAAAAAAAAKAPj/AwAAAAAAAAAKAPn/AwAAAAEAAAAKAPr/AwAAAAEAAAAKAP3/AwAEAAAAAAAKAP7/AwAAAAAAAAAKAP//AwAAAAAAAAAKAAAAAwADAAEAAAAKAAEAAwAEAAAAAAAKAAIAAwAEAAAAAAAKAAMAAwAEAAAAAAAKAAQAAwAEAAAAAAAKAAUAAwAEAAAAAAAKAAYAAwAEAAAAAAALAPD/AwAAAAAAAAALAPH/AwAAAAAAAAALAPL/AwAAAAAAAAALAPP/AwAAAAAAAAALAPT/AwAAAAAAAAALAPX/AwAAAAAAAAALAPb/AwAAAAAAAAALAPf/AwAAAAEAAAALAPj/AwAAAAEAAAALAPn/AwAAAAEAAAALAPr/AwAAAAAAAAALAP3/AwAEAAAAAAALAP7/AwAEAAAAAAALAP//AwAAAAEAAAALAAAAAwAAAAEAAAALAAEAAwAEAAAAAAALAAIAAwAAAAAAAAALAAMAAwAEAAAAAAALAAQAAwAAAAAAAAALAAUAAwAEAAAAAAALAAYAAwAAAAEAAAAMAPD/AwAAAAAAAAAMAPH/AwAAAAAAAAAMAPL/AwAAAAAAAAAMAPP/AwAAAAAAAAAMAPT/AwAAAAAAAAAMAPX/AwAAAAAAAAAMAPb/AwAAAAAAAAAMAPf/AwAAAAEAAAAMAPj/AwAAAAEAAAAMAPn/AwAAAAEAAAAMAPr/AwAAAAEAAAAMAP3/AwAAAAEAAAAMAP7/AwAEAAAAAAAMAP//AwAEAAAAAAAMAAAAAwADAAEAAAAMAAEAAwAEAAAAAAAMAAIAAwAAAAAAAAAMAAMAAwAAAAEAAAAMAAQAAwAEAAAAAAAMAAUAAwAAAAAAAAAMAAYAAwAEAAAAAAANAPD/AwAAAAAAAAANAPH/AwAAAAAAAAANAPL/AwAAAAAAAAANAPP/AwAAAAAAAAANAPT/AwAAAAAAAAANAPX/AwAAAAAAAAANAPb/AwAAAAEAAAANAPf/AwAAAAAAAAANAPj/AwAAAAAAAAANAPn/AwAAAAEAAAANAPr/AwAAAAAAAAANAP3/AwAEAAAAAAANAP7/AwAEAAAAAAANAP//AwAEAAAAAAANAAAAAwAAAAAAAAANAAEAAwAEAAAAAAANAAIAAwAAAAEAAAANAAMAAwAAAAEAAAANAAQAAwAEAAAAAAANAAUAAwAEAAAAAAANAAYAAwAEAAAAAAAIAO//AwABAAAAAAAJAO7/AwABAAAAAAD9/wcAAwADAAEAAAD7/wcAAwAAAAEAAAD7/wgAAwAAAAEAAAD6/wgAAwAAAAEAAAD5/wkAAwAAAAEAAAD6/wcAAwAAAAEAAAAEAO//AwAAAAEAAAAFAO7/AwAAAAEAAAAFAO//AwAAAAEAAAD8/wcAAwAAAAEAAAD8/wgAAwAAAAEAAAD+/wcAAwAAAAEAAAD+/wgAAwAAAAEAAAD//wcAAwAAAAEAAAAOAPj/AwAAAAEAAAAPAPj/AwAAAAEAAAAPAPf/AwAAAAEAAAAQAPb/AwAAAAEAAAARAPb/AwAAAAEAAAAOAPn/AwAAAAEAAAAOAPr/AwAAAAEAAAAIAAcAAwAEAAAAAAAIAAgAAwAAAAEAAAAHAAkAAwAAAAEAAAAHAAoAAwAAAAEAAAAGAAsAAwAAAAEAAAAGAAwAAwAAAAEAAAAJAAgAAwAAAAEAAAAJAAcAAwAEAAAAAAAOAAAAAwAAAAEAAAAPAAAAAwAEAAAAAAAPAP//AwAAAAEAAAAQAP7/AwAEAAAAAAAQAP3/AwAAAAEAAAAOAAEAAwAEAAAAAAAOAAIAAwAAAAEAAAAKAAcAAwAEAAAAAAAKAAgAAwAAAAEAAAAJAAkAAwAAAAEAAAAJAAoAAwAAAAEAAAAIAAsAAwAAAAEAAAAIAAwAAwAAAAEAAAARAPz/AwAAAAEAAAARAPv/AwAAAAEAAAASAPr/AwAAAAEAAAATAPr/AwAAAAEAAAATAPn/AwAAAAEAAAAUAPj/AwAAAAEAAAATAPf/AwAAAAEAAAAOAP//AwAEAAAAAAAOAP7/AwAEAAAAAAAPAP7/AwAEAAAAAAAPAP3/AwAEAAAAAAAOAP3/AwAEAAAAAAD4//P/AwAEAAAAAAAQAAAAAwAEAAAAAAARAAAAAwAEAAAAAAARAAEAAwAEAAAAAAASAAEAAwAEAAAAAAATAAIAAwAEAAAAAAAQAAEAAwAEAAAAAAAPAAEAAwAEAAAAAAD4/wAAAwAEAAAAAAD3/wAAAwAEAAAAAAD2////AwAEAAAAAAD1////AwAEAAAAAAD0////AwAEAAAAAAD0//7/AwAEAAAAAADz//7/AwAEAAAAAADz//3/AwAEAAAAAAD0//3/AwAEAAAAAAD1//z/AwAEAAAAAAD2//z/AwAEAAAAAAD2//v/AwAEAAAAAAD3//v/AwAEAAAAAAD4//v/AwAEAAAAAAD4//3/AwAEAAAAAAD4//7/AwAEAAAAAAD3//7/AwAEAAAAAAD2//7/AwAEAAAAAAD1//7/AwAEAAAAAAD2/wAAAwAEAAAAAAD3/wEAAwAEAAAAAAD4/wEAAwAEAAAAAAAFAAcAAwAEAAAAAAAGAAcAAwAEAAAAAAAHAAcAAwAEAAAAAAALAAcAAwAEAAAAAAAMAAgAAwAEAAAAAAANAAgAAwAEAAAAAAD4//r/AwAEAAAAAAD3//r/AwAEAAAAAAD2//n/AwAEAAAAAAD1//n/AwAEAAAAAAD1//j/AwAEAAAAAAD0//f/AwAEAAAAAAD0//b/AwAEAAAAAADz//X/AwAEAAAAAADz//T/AwAEAAAAAADy//T/AwAEAAAAAAD0//T/AwAEAAAAAAD0//X/AwAEAAAAAAD1//X/AwAEAAAAAAD2//b/AwAEAAAAAAD2//f/AwAEAAAAAAD3//f/AwAEAAAAAAD4//j/AwAEAAAAAAAOAAYAAwAEAAAAAAAOAAUAAwAEAAAAAAAPAAYAAwAEAAAAAAAQAAYAAwAEAAAAAAAQAAcAAwAEAAAAAAARAAcAAwAEAAAAAAASAAgAAwAEAAAAAAASAAkAAwAEAAAAAAATAAkAAwAEAAAAAAAUAAoAAwAEAAAAAAAVAAoAAwAEAAAAAAAVAAsAAwAEAAAAAAA=")
tile_set = SubResource("TileSet_pbw6q")

[node name="Army List" type="Control" parent="." node_paths=PackedStringArray("parent")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_rgh2o")
parent = NodePath("..")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_kln2b")

[connection signal="pressed" from="UI2/Zoom Out" to="." method="_on_zoom_out_pressed"]
[connection signal="pressed" from="UI2/Zoom In" to="." method="_on_zoom_in_pressed"]
[connection signal="pressed" from="UI2/Next Day" to="." method="_next_day"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_area_2d_body_shape_entered"]
